--- a/demo.html
+++ b/demo.html
@@ -64,7 +64,7 @@ textarea {
 </div>
 
 <script>
-  var cors_api_url = 'https://e-phi-eight.vercel.app/';
+  var cors_api_url = 'https://e-phi-eight.vercel.app';
   function doCORSRequest(options, printResult) {
     var x = new XMLHttpRequest();
     x.open(options.method, cors_api_url + options.url);
