--- a/demo.html
+++ b/demo.html
@@ -62,49 +62,8 @@ textarea {
 <div id="bottom">
   <textarea id="output"></textarea>
 </div>
-
-<script>
-  var cors_api_url = 'https://e-phi-eight.vercel.app/';
-  function doCORSRequest(options, printResult) {
-    var x = new XMLHttpRequest();
-    x.open(options.method, cors_api_url + options.url);
-    x.onload = x.onerror = function() {
-      printResult(
-        options.method + ' ' + options.url + '\n' +
-        x.status + ' ' + x.statusText + '\n\n' +
-        (x.responseText || '')
-      );
-    };
-    if (/^POST/i.test(options.method)) {
-      x.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-    }
-    x.send(options.data);
-  }
-
-  // Bind event
-  (function() {
-    var urlField = document.getElementById('url');
-    var dataField = document.getElementById('data');
-    var outputField = document.getElementById('output');
-    document.getElementById('get').onclick =
-    document.getElementById('post').onclick = function(e) {
-      e.preventDefault();
-      doCORSRequest({
-        method: this.id === 'post' ? 'POST' : 'GET',
-        url: urlField.value,
-        data: dataField.value
-      }, function printResult(result) {
-        outputField.value = result;
-      });
-    };
-  })();
-  if (typeof console === 'object') {
-    console.log('// To test a local CORS Anywhere server, set cors_api_url. For example:');
-    console.log('cors_api_url = "http://localhost:8080/"');
-  }
-</script>
   <script>(function() {
-    var cors_api_host = 'cors-anywhere.herokuapp.com';
+    var cors_api_host = 'e-phi-eight.vercel.app';
     var cors_api_url = 'https://' + cors_api_host + '/';
     var slice = [].slice;
     var origin = window.location.protocol + '//' + window.location.host;
