--- a/demo.html
+++ b/demo.html
@@ -63,7 +63,7 @@ textarea {
   <textarea id="output"></textarea>
 </div>
   <script>
-  var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
+  var cors_api_url = 'https://e-yonathandoss.vercel.app/';
   function doCORSRequest(options, printResult) {
     var x = new XMLHttpRequest();
     x.open(options.method, cors_api_url + options.url);
